Address sonar issues, update kotlin version, add sonar and jacoco plugins